<resources>
    <string name="app_name">PokedexApp</string>
    <string name="pokemon_name">Pokemon Name</string>
    <string name="pokemon_height">Height</string>
    <string name="pokemon_weight">Weight</string>
    <string name="pokemon_id">id</string>
    <string name="name_detail_pokemon">Name Pokemon</string>
    <string name="idPokemon">id</string>
    <string name="weight_pokemon">5 Kg</string>
    <string name="height_pokemon">5 mt</string>
    <string name="number_pokemon">N° </string>
    <string name="type_pokemon">Type</string>
    <string name="home">Home</string>
    <string name="pokemon_team">My Team</string>

    <string name="add_favorite_pokemon"> The pokemon has been added to your favorites successfully! </string>
    <string name="remove_favorite_pokemon">The pokemon has been removed successfully  from your favorites </string>
</resources>